--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Lisbon Chair Shop</title>
+    <title>Giddy's Chair Shop</title>
   </head>
   <body>
     <div class="container">
@@ -28,7 +28,7 @@
           <a class="btn btn-big" href="#">Shop Chairs</a>
         </div>
         <aside class="main-img">
-          <img src="/photos/mian img.jpg" alt="shoes" />
+          <img src="/Giddy-s-Chair-Shop/photos/mian img.jpg" alt="shoes" />
         </aside>
       </header>
       <h2 class="special">What makes our chairs special</h2>
@@ -55,7 +55,7 @@
           </p>
         </div>
         <div class="box box4">
-          <img class="grid-img" src="/photos/sitted img.png" alt="whatever" />
+          <img class="grid-img" src="/Giddy-s-Chair-Shop/photos/sitted img.png" alt="whatever" />
         </div>
         <div class="box box5">
           <h4 class="quote-header">
@@ -76,7 +76,7 @@
         <div>
           <img
             class="gridImg"
-            src="/photos/single chair.jpg"
+            src="/Giddy-s-Chair-Shop/photos/single chair.jpg"
             alt="single chair"
           />
           <div class="img-text">
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div>
-          <img class="gridImg" src="/photos/chair.jpg" alt="single chair" />
+          <img class="gridImg" src="/Giddy-s-Chair-Shop/photos/chair.jpg" alt="single chair" />
           <div class="img-text">
             <h4>The Laid Back</h4>
             <div class="best-selling-flex">
@@ -116,7 +116,7 @@
         <div>
           <img
             class="gridImg"
-            src="/photos/another single.jpg"
+            src="/Giddy-s-Chair-Shop/photos/another single.jpg"
             alt="single chair"
           />
           <div class="img-text">
@@ -138,7 +138,7 @@
         <div>
           <img
             class="gridImg big-chair"
-            src="/photos/lisbon chair.jpg"
+            src="/Giddy-s-Chair-Shop/photos/lisbon chair.jpg"
             alt="single chair"
           />
           <div class="img-text">
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div>
-          <img class="gridImg" src="/photos/sofa.jpg" alt="single chair" />
+          <img class="gridImg" src="/Giddy-s-Chair-Shop/photos/sofa.jpg" alt="single chair" />
           <div class="img-text">
             <h4>The Laid Back</h4>
             <div class="best-selling-flex">
@@ -176,7 +176,7 @@
           </div>
         </div>
         <div>
-          <img class="gridImg" src="/photos/mian img.jpg" alt="single chair" />
+          <img class="gridImg" src="/Giddy-s-Chair-Shop/photos/mian img.jpg" alt="single chair" />
           <div class="img-text">
             <h4>The Comfy chair</h4>
             <div class="best-selling-flex">
